--- a/app/src/main/res/layout/rv_currency.xml
+++ b/app/src/main/res/layout/rv_currency.xml
@@ -1,22 +1,40 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:background="@color/colorBackground">
+
+    <de.hdodenhof.circleimageview.CircleImageView
+        android:id="@+id/ivFlagIcon"
+        android:layout_width="40dp"
+        android:layout_height="40dp"
+        android:layout_margin="16dp"
+        android:layout_alignParentStart="true"
+        android:layout_centerVertical="true"/>
 
     <TextView
         android:id="@+id/tvCurrencyName"
-        android:textSize="20sp"
-        android:textColor="@color/colorAccent"
-        android:layout_width="0dp"
+        style="@style/StandardTextView"
+        android:layout_alignTop="@id/ivFlagIcon"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="center_vertical|start"
-        android:layout_weight="1" />
+        android:layout_toEndOf="@id/ivFlagIcon" />
+
+    <TextView
+        android:id="@+id/tvCurrencyFullName"
+        style="@style/SmallTextView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/tvCurrencyName"
+        android:layout_alignStart="@id/tvCurrencyName"
+        android:layout_toEndOf="@id/ivFlagIcon" />
 
     <EditText
         android:id="@+id/etCurrencyValue"
-        android:layout_width="0dp"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="center_vertical|end"
-        android:layout_weight="1"
-        android:inputType="phone" />
-</LinearLayout>
+        android:layout_marginEnd="16dp"
+        android:layout_alignParentEnd="true"
+        android:layout_centerVertical="true"
+        android:importantForAutofill="no" />
+</RelativeLayout>
